new figure and more text

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -2267,4 +2267,213 @@ year={1972}
   year={2018}
 }
 
+@article{ceron2016first,
+  title={First-and second-level agenda setting in the Twittersphere: An application to the Italian political debate},
+  author={Ceron, Andrea and Curini, Luigi and Iacus, Stefano M},
+  journal={Journal of Information Technology \& Politics},
+  volume={13},
+  number={2},
+  pages={159--174},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{maynard2014cares,
+  title={Who cares about sarcastic tweets? investigating the impact of sarcasm on sentiment analysis},
+  author={Maynard, DG and Greenwood, Mark A},
+  booktitle={LREC 2014 Proceedings},
+  year={2014},
+  organization={ELRA}
+}
+
+@inproceedings{dacrema2019we,
+  title={Are we really making much progress? A worrying analysis of recent neural recommendation approaches},
+  author={Dacrema, Maurizio Ferrari and Cremonesi, Paolo and Jannach, Dietmar},
+  booktitle={Proceedings of the 13th ACM Conference on Recommender Systems},
+  pages={101--109},
+  year={2019}
+}
+
+@article{levitsky2002elections,
+  title={Elections without democracy: The rise of competitive authoritarianism},
+  author={Levitsky, Steven and Way, Lucan A},
+  journal={Journal of democracy},
+  volume={13},
+  number={2},
+  pages={51--65},
+  year={2002},
+  publisher={Johns Hopkins University Press}
+}
+
+@misc{levitsky2006competitive,
+  title={Competitive Authoritarianism: The Emergence and Dynamics of Hybrid Regimes in the Post-Cold War Era. Manuscript Draft},
+  author={Levitsky, S and Way, LA},
+  year={2006}
+}
+
+@article{o1994delegative,
+  title={Delegative democracy},
+  author={O'donell, Guillermo A},
+  journal={Journal of democracy},
+  volume={5},
+  number={1},
+  pages={55--69},
+  year={1994},
+  publisher={Johns Hopkins University Press}
+}
+
+@book{norris2019cultural,
+  title={Cultural Backlash: Trump, Brexit and Authoritarian Populism},
+  author={Inglehart, Ronald and Norris,Pippa},
+  volume={1},
+  year={2019},
+  publisher={Cambridge University Press}
+}
+
+@inproceedings{feese2011discriminating,
+  title={Discriminating individually considerate and authoritarian leaders by speech activity cues},
+  author={Feese, Sebastian and Muaremi, Amir and Arnrich, Bert and Troster, Gerhard and Meyer, Bertolt and Jonas, Klaus},
+  booktitle={2011 IEEE Third International Conference on Privacy, Security, Risk and Trust and 2011 IEEE Third International Conference on Social Computing},
+  pages={1460--1465},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{khany2014systemic,
+  title={A Systemic Functional Analysis of Dictators’ Speech: Toward a Move-based Model},
+  author={Khany, Reza and Hamzelou, Zohre},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={98},
+  pages={917--924},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@InProceedings{depling2017,
+   author =  {Alexandre Rademaker and Fabricio Chalub and Livy Real and Cl{\'\a}udia Freitas and Eckhard Bick and Valeria de Paiva},
+   title = 	 {Universal Dependencies for Portuguese},
+   booktitle = {Proceedings of the Fourth International Conference on Dependency Linguistics (Depling)},
+   year =	 {2017},
+   pages =	 {197-206},
+   month =	 {September},
+   address =	 {Pisa, Italy},
+   url = {http://aclweb.org/anthology/W17-6523}
+}
+
+@article{nothman2013learning,
+  title={Learning multilingual named entity recognition from Wikipedia},
+  author={Nothman, Joel and Ringland, Nicky and Radford, Will and Murphy, Tara and Curran, James R},
+  journal={Artificial Intelligence},
+  volume={194},
+  pages={151--175},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@misc{sekine2004named,
+  title={Named entity: History and future},
+  author={Sekine, Satoshi},
+  year={2004},
+  publisher={New York University}
+}
+
+@article{mantyla2018evolution,
+  title={The evolution of sentiment analysis—A review of research topics, venues, and top cited papers},
+  author={M{\"a}ntyl{\"a}, Mika V and Graziotin, Daniel and Kuutila, Miikka},
+  journal={Computer Science Review},
+  volume={27},
+  pages={16--32},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{serrano2015sentiment,
+  title={Sentiment analysis: A review and comparative analysis of web services},
+  author={Serrano-Guerrero, Jesus and Olivas, Jose A and Romero, Francisco P and Herrera-Viedma, Enrique},
+  journal={Information Sciences},
+  volume={311},
+  pages={18--38},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@online{rain2015lda,
+  title = {{Topic Model} Latent Dirichlet Allocation},
+  author = {Brother Rain},
+  year = {2015},
+  urldate = {2015-03-04},
+  url = {https://rstudio-pubs-static.s3.amazonaws.com/63854_c802d802e2204937a25676d17e896f84.html},
+  note = {Acessado em 2020-03-04}
+}
+
+@article{gonccalves2013panas,
+  title={Panas-t: A pychometric scale for measuring sentiments on twitter},
+  author={Gon{\c{c}}alves, Pollyanna and Benevenuto, Fabr{\'\i}cio and Cha, Meeyoung},
+  journal={arXiv preprint arXiv:1308.1857},
+  year={2013}
+}
+
+@article{clark1994manual,
+  title={Manual for the positive and negative affect schedule: Expanded Form},
+  author={Watson, D and Clark, LA},
+  journal={University of Iowa},
+  year={1994}
+}
+
+@article{watson1988development,
+  title={Development and validation of brief measures of positive and negative affect: the PANAS scales.},
+  author={Watson, David and Clark, Lee Anna and Tellegen, Auke},
+  journal={Journal of personality and social psychology},
+  volume={54},
+  number={6},
+  pages={1063},
+  year={1988},
+  publisher={American Psychological Association}
+}
+
+@inproceedings{bollen2010determining,
+  title={Determining the Public Mood State by Analysis of Microblogging Posts.},
+  author={Bollen, Johan and Mao, Huina and Pepe, Alberto},
+  booktitle={ALIFE},
+  pages={667--668},
+  year={2010}
+}
+
+@article{mcnair2003profile,
+  title={Profile of mood states: Bibliography 1964--2002},
+  author={McNair, DM and Heuchert, JP and Shilony, E},
+  journal={Mutli-Health Systems},
+  year={2003}
+}
+
+@inproceedings{hutto2014vader,
+  title={Vader: A parsimonious rule-based model for sentiment analysis of social media text},
+  author={Hutto, Clayton J and Gilbert, Eric},
+  booktitle={Eighth international AAAI conference on weblogs and social media},
+  year={2014}
+}
+
+@inproceedings{hogenboom2013exploiting,
+  title={Exploiting emoticons in sentiment analysis},
+  author={Hogenboom, Alexander and Bal, Daniella and Frasincar, Flavius and Bal, Malissa and de Jong, Franciska and Kaymak, Uzay},
+  booktitle={Proceedings of the 28th annual ACM symposium on applied computing},
+  pages={703--710},
+  year={2013}
+}
+
+@online{thelwall2014sentistrength,
+  title = {{SentiStrength}},
+  author = {Thelwall, Mike and Buckley, K and Paltoglou, G and Cai, C and Kappas, A},
+  year = {2014},
+  urldate = {2014-01-01},
+  url = {http://sentistrength.wlv.ac.uk}
+}
+
+@inproceedings{canuto2016exploiting,
+  title={Exploiting new sentiment-based meta-level features for effective sentiment analysis},
+  author={Canuto, S{\'e}rgio and Gon{\c{c}}alves, Marcos Andr{\'e} and Benevenuto, Fabr{\'\i}cio},
+  booktitle={Proceedings of the ninth ACM international conference on web search and data mining},
+  pages={53--62},
+  year={2016}
+}
 
