--- a/text/dissertacao.tex
+++ b/text/dissertacao.tex
@@ -404,7 +404,7 @@ A despeito das dificuldades na classificação de políticos autoritários, uma 
 
 Nas investigações empíricas sobre o tema, a literatura reúne evidências de que a personalidade autoritária está associada à discriminação \cite{titus1957california, meloen1993f}, preconceito religioso \cite{laythe2001predicting}, contra homossexuais \cite{hunsberger1996religious, jonathan2008influence}, preconceito racial \cite{rowatt2004christian}, à manifestações de sexismo \cite{sibley2007antecedents}, xenofobia \cite{thomsen2008we} e preconceito em geral \cite{asbrock2010right}. O que o panorama geral das pesquisas sugere é que, de maneira geral, entidades associadas a ordem, segurança e autoridade são desproporcionalmente valorizadas por autoritários e entidades associadas a populações marginais, desproporcionalmente depreciadas.
 
-Como estratégia metodológica, buscou-se mensurar o valor atribuído, nas falas dos parlamentares, às duas classes de entidades que possuem grande saliência no discurso autoritário: os objetos de exaltação e os objetos de rejeição. Para isso, utilizou-se um dicionário de entidades textuais como chave para mensurar a valência das sentenças a associada a cada uma delas. Essa abordagem baseia-se nos trabalhos que utilizaram análise automatizada de conteúdo para classificar populistas \cite{rooduijn2011measuring, oliver2016rise, aslanidis2018measuring} e identificar incivilidade \cite{vargo2017socioeconomic} e depressão \cite{neuman2012proactive, kang2016identifying}.
+Na estratégia metodológica, dessa dissertação, tomou-se o autoritarismo em discursos como uma variável composta a partir da composição da i) adesão e rejeição expressas por populações sensíveis e grupos de autoridade ii) o sentimento subjacente aos temas nos quais as menções a essas entidades são realizadas e iii) a ênfase nas menções. Com isso, estimou-se a posição individual dos parlamentares quanto às duas classes de entidades que possuem grande saliência no discurso autoritário: os objetos de exaltação e os objetos de rejeição. Para isso, utilizou-se um dicionário de termos, para identificar discursos e sentenças nas quais cada classe de entidade é mencionada, algoritmos de reconhecimento automatizado de tópicos (LDA) e de entidades nomeadas (NER), para categorizar temas e atributos das entidades e Análise de Sentimentos, para medir a valência dos componentes. Essa abordagem inspira-se nos trabalhos que utilizaram análise automatizada de conteúdo para classificar populistas \cite{rooduijn2011measuring, oliver2016rise, aslanidis2018measuring} e identificar incivilidade \cite{vargo2017socioeconomic} e depressão \cite{neuman2012proactive, kang2016identifying}.
 
 Os resultados apresentaram correspondência com as expectativas da literatura. As bacadas da Bala e da Bíblia apresentaram proporcionamente o maior número de parlamentares autoritários. Como consequência, é possível perceber, para o caso brasileiro, forte correlação entre discurso autoritário e o populismo penal. Por fim, outro dado preocupante, é de que os anos de 2018 e 2019 apresentaram um significativo aumento na expressão de autoritarismo por meio das falas de parlamentares.
 % ----------------------------------------------------------
@@ -417,11 +417,9 @@ Num passado não tão distante, autoritarismo e democracia eram conceituados com
 
 O que observou-se após a Terceira Onda de Democratização, todavia, foi um fenômeno contra-intuitivo: revoluções majoritaristas e anti-pluralistas trouxeram fins prematuros para algumas das novas democracias \cite{lipset1993reflections}. Além disso, um bom conjunto de achados aponta que: a preferência pela democracia têm se restringido e a adesão à soluções autoritárias, aumentado, mesmo em democracias antigas \cite{foa2016democratic, foa2017signs, foa2017end}; o apoio à líderes de pulso firme tem aumentado, consistentemente, ao longo do últimos 20 anos, nas democracias em desenvolvimento \cite{voeten2016people}.
 
-O fato de políticos autoritários serem eleitos em regimes democráticos põem em cheque classificações binárias de sistemas políticos. A ascenção dessas lideranças a chefia do executivo aumenta as chances de transições de governo conflituosas, retrocessos na qualidade da democracia, aumento da percepção de corrupção e erosão de direitos civis \cite{mounk2018thepopulist}. Ou seja, a presença de agentes autoritários no governo, independente das instituições políticas de um país, proporciona administrações que se distanciam dos ideiais democráticos. 
+O fato de políticos autoritários serem eleitos em regimes democráticos põem em cheque classificações binárias de sistemas políticos. Entre países da América Latina e África com histórico de governos militares e ex-integrantes da URSS, registros da convivência de instituições eleitorais e baixo apoio normativo à democracia e grande competitividade de figuras autoritárias se acumulam \cite{booth1984political,seligson2003democracies, seligson2005feeding}. 
 
-Partindo disso, pode-se definir o autoritarismo em três camadas: i) no nível das configurações do regime, ii) das práticas dos agentes institucionais e iii) da psicologia dos atores políticos \cite{glasius2018authoritarianism}. Nesse sentido, um sistema político é autoritário quando veta eleições, tutela os direitos políticos dos cidadãos e concentra amplos poderes na elite. Já no nível intermediário, práticas autoritárias são caracterizadas por decisões que afetam o \emph{accountability} vertical, na medida em que limitam a liberdade de expressão efetiva dos cidadãos, controlam o acesso à informação ou violam a privacidade, por exemplo. Por fim, no nível individual, políticos podem ser classificados como mais ou menos autoritários de acordo com a sua adesão aos princípios de que i) a sociedade deve ser organizada em torno da autoridade e de regras rígidas e ii) que indivíduos desviantes devem ser punidos.
-
-A diferenciação analítica do fenômeno em níveis, apesar de na prática eles estarem conectados, é importante para assinalar que o autoritarismo está presente em todas as formas de organização política, inclusive em regimes democráticos estabelecidos. Seja nas atitudes do eleitorado ou comportamento dos parlamentares, sua expressão encontra-se em latência num grande número de sociedades, suscetível a fatores que estimulam ou restringem sua emergência. 
+Entre os casos que ilustram esse fenômeno, estão as eleições presidenciais bolivianas de 1997 que concederam uma volta ao poder ao General Hugo Banzer, líder do regime militar que se estendeu ao longo da década de 1970 no país. Em 2016, Rodrigo Duterte, um defensor aberto dos ``esquadrões da morte'', reponsáveis por milhares de violações de direitos humanos entre 1998 e 2016, foi eleito presidente das Filipinas. 
 
 Do ponto de vista da imagem que agentes políticos autoritários constroem de si mesmo, suas plataformas de campanha variam significativamente por contexto cultural. Na Europa Ocidental, partidos de extrema-direita e direita radical tendem a incorporar nativismo, xenofobia, racismo e neoliberalismo em seus discursos \cite{mudde2009populist}. Nos EUA, Nova Zelândia e Canadá, a política do ressentimento, manifesta pela rejeição ostensiva ao \emph{establishment}, conjuga a tônica dos \emph{ousiders} anti-democráticos, e, no caso da Rússia, a xenofobia e o ultranacionalismo desempenham esse papel \cite{norris2005radical}. 
 
@@ -431,9 +429,24 @@ A Alianza Republicana Nacionalista (ARENA), no Equador, é um caso especial de s
 
 Apesar do populismo penal ser uma marca de campanha proeminente na região que concentra maiores estatísticas de violência do mundo, o autoritarismo é flexível para se adequar em um grande conjunto de narrativas. No caso da Nicarágua, a família Somoza governou o país ao longo dos anos de 1934 e 1979, deixando um legado de violações a direitos civis em nome do combate aos comunistas. Na Venezuela, por outro lado, sob o governo de Hugo Chavez, estatizações, reforma agrária e rivalização com neoliberalismo foram medidas implementadas durante o caminho da reversão autoritária. E em diversas das transições políticas anti-republicanas que ocorreram na América Latina, setores da sociedade civil organizada participaram das mobilizações \cite{valenzuela2004latin}.
 
+A despeito da diversidade de manifestações, uma característica comum unifica as lideranças autoritárias em regimes democráticos: o estilo populista adotado na comunicação com as massas. Em contextos em que eleições são o mecanismo pelo qual o poder é adquirido, tanques de guerra e fuzis são substituídos por discursos inflamados. Do ponto de vista estratégico, agentes políticos autoritários exploram a insatisfação e desconfiança com a elite no poder e as instituições para inflamar a demanda por um figura de pulso firme capaz de guiar o país. Conforme argumentam \citeonline{norris2019cultural}
+
+\begin{quote}
+	[...] Populist rhetoric seeks to corrode faith in the legitimate
+	authority of elected representatives in liberal democracies. But the revolution finds it easier to destroy the old than rebuild the new. The danger is that this leaves the door ajar for soft authoritarians attacking democratic norms and practices. \cite{norris2019cultural}
+\end{quote}
+
+Como efeito, a ascenção dessas lideranças a chefia do executivo aumenta as chances de transições de governo conflituosas, retrocessos na qualidade da democracia, aumento da percepção de corrupção e erosão de direitos civis \cite{mounk2018thepopulist}. Ou seja, a presença de agentes autoritários no governo, independente das instituições políticas de um país, proporciona administrações que se distanciam dos ideiais democráticos.
+
+O comportamento de um grupo político certamente não é condição suficiente para transições autoritárias, contudo  parte da literatura tem aderido a classificações que levam em consideração o caráter híbrido de regimes nos quais, apesar das eleições, apresentam traços autoritários em camadas intermediárias do sistema e no modelo de governo, como ``autoritarismo competitivo''\cite{levitsky2002elections,levitsky2006competitive} e ``democracia delegativa''\cite{o1994delegative}.
+ 
+Partindo disso, pode-se definir o autoritarismo em três camadas: i) no nível das configurações do regime, ii) das práticas dos agentes institucionais e iii) da psicologia dos atores políticos \cite{glasius2018authoritarianism}. Nesse sentido, um sistema político é autoritário quando veta eleições, tutela os direitos políticos dos cidadãos e concentra amplos poderes na elite. Já no nível intermediário, práticas autoritárias são caracterizadas por decisões que afetam o \emph{accountability} vertical, na medida em que limitam a liberdade de expressão efetiva dos cidadãos, controlam o acesso à informação ou violam a privacidade, por exemplo. Por fim, no nível individual, políticos podem ser classificados como mais ou menos autoritários de acordo com a sua adesão aos princípios de que i) a sociedade deve ser organizada em torno da autoridade e de regras rígidas e ii) que indivíduos desviantes devem ser punidos.
+
+A diferenciação analítica do fenômeno em níveis, apesar de na prática eles estarem conectados, é importante para assinalar que o autoritarismo está presente em todas as formas de organização política, inclusive em regimes democráticos estabelecidos. Seja nas atitudes do eleitorado ou comportamento dos parlamentares, sua expressão encontra-se em latência num grande número de sociedades, suscetível a fatores que estimulam ou restringem sua emergência. 
+
 \section{A personalidade Autoritária}
 
-Com tantas cores que preenchem as campanhas políticas de agentes autoritários, o que define a essência da personalidade autoritária? O que há de comum entre tantos líderes que frequentemente rivalizaram entre si?
+Com tantas cores que preenchem o conteúdo ideológico das campanhas políticas de agentes autoritários, o que define a essência do seu comportamento e personalidade? O que há de comum na mentalidade de líderes que frequentemente rivalizam entre si?
 
 Uma das primeiras contribuições para responder essa questão foi feita por \citeonline{adorno1950authoritarian}. Como causa do fascismo e nazismo que ascenderam como problemáticas sociais após a Primeira Guerra Mundial, os autores apontaram a propensão ao autoritarismo como uma psicopatologia desenvolvida no processo de socialização das crianças, responsável pela manifestação de adesão crônica à autoridade e rejeição àqueles que estão em posição de subalternidade. 
 
@@ -454,12 +467,7 @@ Tomando o RWA como preditor, trabalhos empíricos sobre tema apontam que indiví
 \citeonline{coleman1994foundations}, em seu livro \emph{Foundations of Social Theory}, explora o caso de Charles Manson e o grupo "\emph{the Family}" para argumentar sobre a transferência de autonomia em relações hierarquizadas. Após o cometimento de brutais assassinatos, um dos membros relatou que:
 
 \begin{quote}
-	Sometimes I felt as though [Manson] were always with me, thinking my
-	thoughts for me—or his through me . . . It was as though Charlie kept
-	pulling me back, slowly but persistently, even though we’d had no contact
-	since I walked out the back door of that Topanga Canyon cabin. I tried to
-	fight it, but it was no use, he wouldn’t let go of me. I’d seen the world I was
-	living in and he’d warned me, and I found it just what he’d said it would be. (Watson, 1978, p. 81)
+	Sometimes I felt as though [Manson] were always with me, thinking my thoughts for me—or his through me . . . It was as though Charlie kept pulling me back, slowly but persistently, even though we’d had no contact since I walked out the back door of that Topanga Canyon cabin. I tried to fight it, but it was no use, he wouldn’t let go of me. I’d seen the world I was living in and he’d warned me, and I found it just what he’d said it would be. (Watson, 1978, p. 81)
 \end{quote}
 
 Em casos de submissão dogmática, ilustrados nesse exemplo extremo, é difícil distinguir se a motivação prepoderante dos seguidores de Manson era a "\emph{Helter Skelter}" -- uma cruzada racial com o propósito de punir negros -- ou o culto ao seu líder.
@@ -468,21 +476,21 @@ De fato, em termos de dinâmica eleitoral, expera-se que a relação entre eleit
 
 \section{O discurso autoritário}
 
-O discurso é um exercício de poder. É por meio da linguagem que registramos conhecimento, leis e regras de comportamento. Estes, por sua vez, compõem as principais categorias que humanos utilizam como referencial para interpretar o mundo ao seu redor. Se observamos alguém furar uma fila, julgamos sua atitude como justa ou oportunista, legal ou criminosa e moral ou anti-ética, por exemplo, e esses termos estão diretamente conectados a instituições sociais como o Estado e a Religião. 
+O discurso é um exercício de poder. É por meio da linguagem que registramos conhecimento, leis e regras de comportamento. Estes, por sua vez, compõem as principais categorias que humanos utilizam como referencial para interpretar o mundo ao seu redor. Por exemplo, se observamos alguém furar uma fila, julgamos sua atitude como justa ou oportunista, legal ou criminosa e moral ou anti-ética. Esses termos estão diretamente conectados a instituições sociais como o Estado e a Religião. 
 
-Contudo, importante ressaltar que apesar dos grandes enunciados que constituem guias de comportamento estarem ancorados na crença coletiva de sua validade, a capacidade de instituí-los está concentrada em poucos indivíduos \cite{foucault1969archeologie}. Ou seja, populações creditam legitimidade às suas leis e religiões, por exemplo, porém apenas uma pequena parte da nação é capaz de exercer influência direta no conteúdo de constituições e ritos.
+Contudo, é importante ressaltar que, apesar dos grandes enunciados que constituem nossos guias de comportamento estarem ancorados na crença coletiva de sua validade, a capacidade de instituí-los está concentrada em poucos indivíduos \cite{foucault1969archeologie}. Ou seja, populações creditam legitimidade às suas leis e religiões, porém apenas uma pequena parte da nação é capaz de exercer influência direta no conteúdo de constituições e ritos.
 
-A existência de um ranking social, que possui lugar de destaque para poucos e de subalternidade, para muitos, possui gênese anterior a civilização como conhecemos. As assimetrias que observamos nas relações sociais são fruto de um longo histórico de disputas e competição que acompanham a trajetória de sobrevivência de todas as espécies. 
+A existência de um ranking social, que possui lugar de destaque para poucos e de subalternidade, para muitos, possui gênese anterior a civilização como conhecemos. As assimetrias que observamos nas relações sociais são fruto de um longo histórico de disputas e competição que acompanham a trajetória de sobrevivência de todas as espécies. Nessa dinâmica, a subserviência pode ou não ser conquistada por meio da força, mas sua manutenção se dá de maneira pacífica, na medida em que é naturalizada. 
 
 Dentre as causas da hierarquia entre indivíduos, que funda a desigualdade observada na comunicação, a literatura aponta características individuais como determinantes significativos do desenvolvimento de dominância em grupos animais e humanos. Pesquisas documentam cor \cite{bakker1983determinants}, idade \cite{cote2000dominance, bohlin2001determinants}, peso corporal \cite{morgan2000predictors}, altura \cite{huang2002camera} e aparência \cite{lawson2010looking, lodge2013rationalizing} como alguns dos preditores da posição social de um indivíduo.    
 
 Se por um lado características individuais explicam o surgimento da dominância, por outro, não são o único ingrediente do surgimento e estabilidade de cadeias de hierarquia que envolvem muitos integrantes. A disputa pelo lugar de dominância é mediada pela dinâmica interna dos grupos que compõem uma sociedade \cite{ridgeway1989dominance} e, em seguida, das relações entre os grupos \cite{chase1980social,chase2002individual}. Ou seja, a desigualdade é segmentada por clivagens formadas a partir de uma dinâmica complexa que envolvem aglutinações hierarquizadas de individúos em grupos que podem ser ordenados por status.  
 
-Como argumentam \citeonline{sidanius2001social}, uma vez que grupos sociais são formados em torno de clivagens específicas -- por exemplo idade, gênero, clãs, nacionalidade, religião, cor e classe social -- seus integrantes reproduzem comportamento competitivo no qual buscam estabelecer superioridade. Nessa dinâmica, a formação de grupos dominantes e dominados estabelece a base da desigualdade, que consiste em uma sobreatribuição de valores positivos aos dominantes e, de valores negativos, aos dominados. Uma vez que discursos refletem relações de dominância presentes na sociedade, expressões linguísticas do autoritarismo tendem a carregar traços valorativos presentes no seu conteúdo ideológico: a exaltação das figuras reconhecidas como autoridade e a depreciação de grupos minoritários de status social mais baixo. 
+Como argumentam \citeonline{sidanius2001social}, uma vez que grupos sociais são formados em torno de clivagens específicas -- por exemplo idade, gênero, clãs, nacionalidade, religião, cor e classe social -- seus integrantes reproduzem comportamento competitivo no qual buscam estabelecer superioridade. Nessa dinâmica, a formação de grupos dominantes e dominados estabelece a base da desigualdade, que consiste em uma sobreatribuição de valores positivos aos dominantes e, de valores negativos, aos dominados. Dado que discursos refletem relações de dominância presentes na sociedade, expressões linguísticas do autoritarismo tendem a carregar traços valorativos presentes no seu conteúdo ideológico: a exaltação das figuras reconhecidas como autoridade e a depreciação de grupos minoritários de status social mais baixo. 
 
-Conforme argumentou-se na seção anterior, indivíduos autoritários aprensentam maior propensão a expressão de preconceito e discriminação em geral. Ainda sobre o conteúdo de discursos autoritários, a literatura aponta a conexão entre autoritarismo e demonstração de hostilidade \cite{siegel1956relationship} e trabalhos que se dedicaram a investigar grupos políticos extremistas produziram resultados que sugerem que o dogmatismo político está correlacionado ao uso de discurso de ódio contra adversários e minorias \cite{gerstenfeld2003hate, ben2016hate}.  
+Isto posto, o autoritarismo pode ser lido como uma propriedade que emerge de sistemas sociais desiguais e hierarquizados, nos quais a dominância é reafirmada como narrativa política. Conforme argumentou-se na seção anterior, indivíduos autoritários aprensentam maior propensão a expressão de preconceito e discriminação em geral. Ainda sobre o conteúdo de discursos autoritários, a literatura aponta a conexão entre autoritarismo e demonstração de hostilidade \cite{siegel1956relationship} e trabalhos que se dedicaram a investigar grupos políticos extremistas produziram resultados que sugerem que o dogmatismo político está correlacionado ao uso de discurso de ódio contra adversários e minorias \cite{gerstenfeld2003hate, ben2016hate}.  
 
-O discurso autoritário apresenta ainda dimensões revelevantes no que dizem respeito a sua forma e estilo. \citeonline{beauzamy2013discontinuities} argumentou que dois traços comuns ao discurso facista no passado e no presente, são: i) o uso de argumentos elaborados com base em pseudo-ciência, teorias da conspiração, considerações mágicas e exegese religiosa e ii) uso de clichês e esteriótipos populares como metáforas em menções pejorativas a populações marginalizadas.
+O discurso autoritário apresenta ainda dimensões revelevantes no que dizem respeito a sua forma e estilo. \citeonline{beauzamy2013discontinuities} argumentou que dois traços comuns ao discurso facista no passado e no presente, são: i) o uso de argumentos elaborados com base em pseudo-ciência, teorias da conspiração, considerações mágicas e exegese religiosa e ii) uso de clichês e esteriótipos populares como metáforas em menções pejorativas a populações marginalizadas. Numa investigação similar, \citeonline{khany2014systemic} analisaram 20 discursos de personalidades históricas como Hitler, Stalin e Gadhafi. Como características comuns, apontaram a i) o majoritarismo e a massificação, ii) a defesa da incorruptibilidade do governo e iii) a manipulação das expectativas da opinião pública.
 
 Em convergência com essa caracterização, \citeonline{smith1990symptomology} apresentou constribuição relevante para uma tipologia dos discursos autoritários analisando debates parlamentares acerca da ``proibição do fomento a homosexualidade'', que ocorreram entre as décadas de 80 e 90, nos EUA. Segundo a autora as falas autoritárias que emergiram sobre o tema apresentavam um traço marcante: a evocação de preconceitos e associações espúrias como método de enquadrar a discussão de forma desfavorável para a população gay. Em um dos exemplos dessa atitude, a menção à soropositividade como \emph{link} entre homossexualidade e problemas de saúde pública:
 
@@ -577,7 +585,9 @@ No que diz respeito ao desempenho e validação dos métodos, em artigo de \cite
 
 Retomando o problema de pesquisa o qual esta dissertação busca resolver, de forma geral, avalia-se que o universo de \emph{Text as Data} apresenta uma saída consistente para a classificação de políticos autoritários. O potencial para processamento de grandes bancos de dados, com a possibilidade de modelar características individuais complexas, permite uma abordagem abrangente das atitudes de atores políticos cujo ofício implica no exercício da oratória.
 
-Conforme argumentou-se no Capítulo 2, para lideranças autoritárias, discursos são ferramentas de mobilização do seu eleitorado cativo. Nas democracias contemporâneas, é por meio da fala, carregada de traços marcantes, que estes agentes políticos sedimentam e usufruem da dominância que estabelecem. Apesar de não existir correlação clara entre personalidade autoritária e frequência ou tempo de fala [CITAR], espera-se que um parlamentar autoritário utilize, em algum nível, seu espaço no plenário e, com isso, forneça dados suficientes para sua identificação. Autoritários silenciosos são tão raros quanto democratas no comando de ditaduras. 
+Conforme argumentou-se no Capítulo 2, para lideranças autoritárias, discursos são ferramentas de mobilização do seu eleitorado cativo. Nas democracias contemporâneas, é por meio da fala, carregada de traços marcantes, que estes agentes políticos sedimentam e usufruem da dominância que estabelecem. A literatura converge para apontar que indivíduos dominantes tendem a utilizar mais tempo de fala e maior eloquência em seus discursos. Portanto espera-se que um parlamentar autoritário utilize com maior frequência seu espaço no plenário e, com isso, forneça dados suficientes para sua identificação e minimizar a ocorrência de falsos negativos. 
+
+Autoritários silenciosos são tão raros quanto democratas no comando de ditaduras. 
 
 \subsection{Propondo um novo Critério de Classificação}
 
@@ -590,6 +600,7 @@ Discursos políticos se estruturam em torno de elementos e dimensões fundamenta
 	\label{fig:diagrama}
 	\centering
 	\includegraphics[width=1\linewidth]{figures/diagrama_discurso_autoritario}
+	Fonte: elaboração do autor
 \end{figure}
 
 Figura 1 representa um diagrama simplicado do discurso político. A partir dele, pode-se compreender a dinâmica entre os elementos fundamentais e suas dimensões. Temas e Tempo ganham significado a medida em que um orador dispõem em sua fala setenças que conectam Atributos à Entidades. Uma vez que discursos políticos envolvem expressão de valor, espera-se que Atributos possuem uma polaridade -- positiva e negativa -- e que, por isso, funcionam como dispositivos para demarcar um posicionamento favorável ou desfavorável. Quanto mais Atributos negativos são utilizados para caracterizar as Entidades mencionadas sobre um tema, mais negativo será a compreensão geral da sentenças sobre o Tema.
@@ -630,8 +641,44 @@ SupEntDom = f(\tau_0 + \tau_1 * AuthSubmiss + \tau_2 * Convent + v)
 
 \subsection{Operacionalizando a Estimação dos Metaparâmetros}
 
-Do ponto de vista da operacionabilidade do critério de classificação proposto, é necessário resolver o desafio de mensurar os parâmetros das funções que definem o Apoio à Entidades Dominantes e Subalternas. Para isso, algoritmos de inteligência artificial oferecem soluções para o problema. Em especial, serão utilizadas três técnicas que, respectivamente, i) identificam os tópicos principais de uma coleção de discursos, ii) reconhecem entidades textuais em uma sentença e iii) mensuram as valência de uma sentenção. São elas o LDA, NER (\emph{Named-Entity Recognition}) e Análise de Sentimentos.   
+Do ponto de vista da operacionabilidade do critério de classificação proposto, é necessário resolver o desafio de mensurar os parâmetros das funções que definem o Apoio à Entidades Dominantes e Subalternas. Para isso, algoritmos de inteligência artificial oferecem soluções para o problema. Em especial, serão utilizadas três técnicas que, respectivamente, i) identificam os tópicos principais de uma coleção de discursos, ii) reconhecem entidades textuais em uma sentença e iii) mensuram as valência de uma sentenção. São elas o LDA (Latent Dirichlet Allocation), NER (\emph{Named-Entity Recognition}) e Análise de Sentimentos.   
+	
+O LDA é uma técnica de identificação de tópicos em um \emph{corpus} textual, ou seja, um conjunto de documentos, proposto por \citeonline{blei2003latent}. Trata-se de um algorimto não-supervisionado -- que portanto não necessita ser especificado -- que toma documentos como o produto da geração de palavras por $k$ tópicos e possui como \emph{output} listas de termos representativos para cada conjunto. O LDA é bastante popular na literatura e conta com implementações para as ferramentas mais utilizadas pelas comunidade. Entre as premissas do modelo estão:
 
+\begin{itemize}
+	\item A distribuição da ocorrência de termos constitui uma variável latente para temas e tópicos em um texto.
+	\item A frequência das palavras nas sentenças segue uma distribuição \emph{Poisson}, representada por pela variável aleatória $N$.
+	\item A probabilidade associada ao pertecimento de um tópico está associado a uma variável aleatória de distribuição \emph{Dirichlet} de dimensão \emph{k}.
+	\item Tópicos identificados no LDA possuem a propriedade estatística de permutabilidade, ou seja, são independentes entre si em cada documento. 
+\end{itemize}
+
+Como consequência do terceiro item, o LDA não se trata de um classificador de palavras, como cada tópico é independente dentro de cada documento, os temos gerados pelo algoritmo para compor cada um dos conjuntos de termos representativos, alguns deles podem estar presente em mais de um tópico. Todavia, uma estratégia simples para adaptar a técnica para fins de classificação é atribuir, a um trecho textual, o tópico com o qual compartilha mais termos. A partir daí, para mensurar a valência média de cada tópico, basta calcular a média da valência das sentenças de todos os trechos textuais associados.
+
+\begin{figure}[h]
+	\caption{Diagrama do Modelo Generativo no LDA}
+	\label{fig:diagrama}
+	\centering
+	\includegraphics[width=1\linewidth]{figures/diagrama_lda}
+	Fonte: \citeonline{rain2015lda}
+\end{figure}
+
+Na Figura 2 é possível visualizar um diagrama do processo generativo de palavras, sua correspondência com os tópicos e proporção nos documentos proposto por \citeonline{rain2015lda}. No exemplo do autor, LDA está utilizado para classificar tópicos em um artigo sobre ``evolução e o uso de análise de dados para determinar o número de genes que um organismo necessita para sobreviver''. Apesar de cada tópico não possuir valência como uma dimensão adjacente, uma analogia como a aplicação que propõem-se é utilizá-los como um indicador de temas. Basedo na proporção de termos, ao primeiro parágrafo, imputa-se o tema vermelho, ao segundo, amarelo e ao terceiro, azul.   
+
+No que diz respeito a NER, trata-se de um conjunto de técnicas classificação automatizada de entidades linguísticas bastante utilizadas no \emph{Natural Language Processing} (NLP). Conforme foi exposto na seção anterior, entidades são componentes de sentenças que dizem respeito a nomes de pessoas, organizações e, no caso de aplicação desta pesquisa, grupos margilizados e populações sensíveis, por exemplo. Para identificá-las e assinalar a classe ao qual pertencem, grandes enforços coletivos têm sido realizados para elaboração de extensas bases textuais codificadas manualmente. A partir delas, modelos de \emph{Machine Learning} são treinados para replicar a codificação de forma automatizada. 
+
+O processo de treinamento de um modelo de NLP consiste num fluxo de etapas nos informação é i) extraída, ii) processada, iii) modelada e iv) encapsulada em um artefato capaz de devolver \emph{outputs} textuais ou numéricos, dado \emph{inputs} textuais. Na primeira etapa são selecionadas as porções de texto que carregam a principal parcela informacional para modelos, que podem ser toda palavra que não é uma \emph{stop word} -- como preposições e conjunções -- ou apenas suas raízes -- por exemplo, a raíz das palavras ``trabalho'' e ``trabalhador'' é ``trabalh'' -- para reduzir o número de componentes. Depois, cada termo é codificado em valores numéricos a partir de um modelo de representação chamado \emph{Word2Vec}\footnote{Explicar Word2Vec}. A partir daí, os vetores de valores são utilizados como variáveis independentes, ou \emph{features}, em um algoritmo cujo objetivo é otimizar os parâmetros da função que os associa a uma variável dependente, ou \emph{target}. Em NER, o \emph{target} trata-se de uma variável com diversas classes de entidades. 
+
+Um dos bancos de dados públicos para treinamento de modelos de NER é o \emph{Universal Dependencies for Portuguese} (UDP), organizado por \citeonline{depling2017}. Trata-se de um banco de dados com 9.365 sentenças e 210.960 termos estruturados a partir de 530 regras gramaticais e tipificados em 17 categorias de entidades. Em comparação com outros bancos de dados, o UDP possui tamanho reduzido e grande qualidade, especialmente quando levamos em consideração que possui maior número de categorias identificadas \cite{sekine2004named}. Isso se deve ao fato de que trata-se de uma recategorização de sentenças analisadas gramaticalmente, as quais integram a coleção \emph{Bosque}, abastecida há mais de 15 anos por linguistas e gramáticos.  
+
+Outro exemplo de desse tipo de \emph{dataset}, é o \emph{WikiNER}, organizado por \citeonline{nothman2013learning}. A equipe liderou o projeto que classificou manualmente 7.200 artigos do Wikipédia, utilizandos de técnicas de \emph{Semi-Supervised Learning} para aceletar a coleta de informação relevante, reunindo mais de 2 milhões de termos tipificados em 4 categorias. Em comparação ao UDP, o WikiNER possui menor granularidade -- menos categorias -- e uma classificação manual menos ortodoxa, porém o número substancialmente maior de informação. No procedimento de classificação, as \emph{tags} do site servem de atalhos para reconhecer entidades. 
+
+Tomando as duas fontes para o treinamento de algoritmos de classificação automatizada, ferramentas abertas para a comunidade, como o \emph{spaCy} atingem 89{\%} de precisão para língua portuguesa. Apesar de avanços significativos, todavia, os modelos de decodificação desse tipo de dado ainda não são capazes de detectar relações sofisticadas de dependência entre Atributos e Entidades -- segundo o esquema da Figura 1. Portanto, só é possível mensurar valência a nível e sentença e, imputar com algum nível de ruído, o valor da medida para as Entidades mencionadas na sentença.
+
+Com relação a Análise de Sentimentos, assim como outras técnicas, trata-se de uma solução algorítmica para análise de textos, mais especificamente para extração e identificação de emoções, sentimentos e atitudes. Ao longo das três últimas décadas, tem sido cada vez mais utilizada para a automatização no processamento de \emph{reviews} no mercado digital e extração de \emph{features} da dados textuais de opinião pública. Quanto as premissas do modelo e o tipo de resposta que oferece, algoritmos dessa natureza partem do postulado de que toda sentença possui uma valência, ou seja, um posicionamento latente que pode ser tipificado em pró, contra ou neutro -- frequentemente convertidos em valores como -1,0 e 1 -- que representam as classes do \emph{target} na otimização do modelo \cite{serrano2015sentiment, mantyla2018evolution}.  
+
+Uma das formas de calibrar o algoritmo consiste no uso de dicionários codificados, construídos a partir da classificação de termos e expressões que carregam carga semântica negativa ou positiva. Nesse sentido, alguns dos modelos propostos na literatura ancoram-se em artefatos produzidos no campo da linguística e psicologia para conectar palavras a sentimentos, inclusive com grande complexidade. Um desses exemplos é o PANAS-t, desenvolvido por  \citeonline{gonccalves2013panas}, que baseia-se na escala psicométrica PNAS, proposta por \citeonline{watson1988development} e posteriormente estendida por \citeonline{clark1994manual}. A escala, elaborada a partir de entrevistas nas quais respondentes descreviam como se sentiam em relação a certos eventos, identifica expressões associadas a afeição e rejeição. 
+
+Anos antes, \citeonline{bollen2010determining} apresentaram um modelo baseado na escala POMS \cite{mcnair2003profile} que, partindo da mesma estratégia, identificava a valência de uma sentença a partir da frequencia relativa de suas palavras e suas correspondências como a tipologia estabelecida. Contudo, o estado da arte das estratégias baseadas em dicionários é ocupado por combinações de tipologias, uso de fontes mistas -- como \emph{emoticons} --  e processos generativos automatizados, como a interpolação da valência de uma palavra para seus sinônimos e tipificação baseada em coocorrência \cite{hogenboom2013exploiting, hutto2014vader, thelwall2014sentistrength, canuto2016exploiting}.
 
 
 \chapter{Prova de Conceito: o caso da Câmara dos Deputados}\label{resultados}
